Minor alignment fix

--- a/src/app/client/style/credits.css
+++ b/src/app/client/style/credits.css
@@ -36,7 +36,7 @@
 /* Credits container */
 .about-container.credits-mode {
     position: relative;
-    height: calc(100% - 35px);
+    height: 100%;
     overflow: hidden;
     margin: 0;
     padding: 0;
